--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
     android:paddingVertical="20dp"
     tools:context="dreamspace.ads.sdk.demo.MainActivity">
 
+    <Button
+        android:id="@+id/next_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:selectableItemBackground"
+        android:text="NEXT ACT"
+        android:textColor="#3C3C3C" />
+
     <LinearLayout
         android:id="@+id/banner_admob"
         android:layout_width="match_parent"
